[gd_scene load_steps=25 format=3 uid="uid://c6hm1h1elh3mm"]

[ext_resource type="Texture2D" uid="uid://cac8xcyxbggv5" path="res://assets/imports/graphics/icons/Book_Icon_open.png" id="1_e0dwy"]
[ext_resource type="Script" path="res://scenes/GameManager/UIManager.gd" id="1_ijh3a"]
[ext_resource type="Shader" path="res://shaders/vignette/nightmare_vignette.gdshader" id="2_5ylhm"]
[ext_resource type="Texture2D" uid="uid://bd6gjs43h61ra" path="res://assets/imports/graphics/icons/Book_Icon.png" id="2_o5jjq"]
[ext_resource type="Shader" path="res://scenes/UI/main/Glitch.gdshader" id="2_r0o0u"]
[ext_resource type="PackedScene" uid="uid://cphjlxsh6ojbf" path="res://scenes/UI/mission_book.tscn" id="3_7udp3"]
[ext_resource type="Shader" path="res://scenes/UI/main/GlitchObject.gdshader" id="3_xgq3n"]
[ext_resource type="PackedScene" path="res://scenes/UI/options_menu.tscn" id="4_lbubx"]
[ext_resource type="PackedScene" uid="uid://duqwgodvr8nt" path="res://scenes/UI/computer/computer.tscn" id="5_cf373"]
[ext_resource type="FontFile" uid="uid://bo1r4vcj13hxt" path="res://ui/fonts/XTypewriter-Bold.woff2" id="7_5vq04"]

[sub_resource type="Animation" id="Animation_jno3j"]
resource_name = "Exclaim"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.490196), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_u0pls"]
resource_name = "Glitch Screen"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Glitch:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Glitch:material:shader_parameter/shake_power")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.03]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Glitch:material:shader_parameter/shake_color_rate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.01]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer/MissionBookButton:material:shader_parameter/shake_rate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ljjq7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0.982, 0.96, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer/MissionBookButton:material:shader_parameter/shake_rate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Glitch:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Glitch:material:shader_parameter/shake_power")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Glitch:material:shader_parameter/shake_color_rate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_dgnyb"]
resource_name = "close_anim"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.982, 0.96, 0), Color(1, 0.982, 0.96, 0.741176)]
}

[sub_resource type="Animation" id="Animation_db5vn"]
resource_name = "fail"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer/MissionBookButton:material:shader_parameter/shake_rate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.2]
}

[sub_resource type="Animation" id="Animation_sektf"]
resource_name = "hide_room"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_7osjq"]
resource_name = "reveal_room"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dvjtw"]
_data = {
"Exclaim": SubResource("Animation_jno3j"),
"Glitch Screen": SubResource("Animation_u0pls"),
"RESET": SubResource("Animation_ljjq7"),
"close_anim": SubResource("Animation_dgnyb"),
"fail": SubResource("Animation_db5vn"),
"hide_room": SubResource("Animation_sektf"),
"reveal_room": SubResource("Animation_7osjq")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iusep"]
shader = ExtResource("2_5ylhm")
shader_parameter/UPDATE_INTERVAL = 0.163
shader_parameter/STATIC_GRANULARITY = 0.005
shader_parameter/EDGE_BLUR = 0.5
shader_parameter/BORDER_SIZE = 0.3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_53n6u"]
shader = ExtResource("3_xgq3n")
shader_parameter/shake_power = 0.1
shader_parameter/shake_rate = 0.0
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.0
shader_parameter/shake_color_rate = 0.02

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k1yqh"]
texture = ExtResource("1_e0dwy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kwx7i"]
texture = ExtResource("2_o5jjq")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ybpfp"]
bg_color = Color(0.996078, 0.976471, 0.952941, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ly1qh"]
shader = ExtResource("2_r0o0u")
shader_parameter/shake_power = 0.0
shader_parameter/shake_rate = 1.0
shader_parameter/shake_speed = 5.0
shader_parameter/shake_block_size = 30.0
shader_parameter/shake_color_rate = 0.0

[node name="UIManager" type="CanvasLayer"]
script = ExtResource("1_ijh3a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dvjtw")
}

[node name="Vignette" type="ColorRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_iusep")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false

[node name="MarginContainer" type="MarginContainer" parent="."]
z_index = 5
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="MissionBookButton" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_53n6u")
custom_minimum_size = Vector2(145, 145)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_k1yqh")
theme_override_styles/disabled = SubResource("StyleBoxTexture_kwx7i")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_k1yqh")
theme_override_styles/hover = SubResource("StyleBoxTexture_k1yqh")
theme_override_styles/pressed = SubResource("StyleBoxTexture_k1yqh")
theme_override_styles/normal = SubResource("StyleBoxTexture_kwx7i")

[node name="MissionBook" parent="." instance=ExtResource("3_7udp3")]
unique_name_in_owner = true
visible = false
z_index = 10

[node name="OptionMenu" parent="." instance=ExtResource("4_lbubx")]
unique_name_in_owner = true
visible = false
z_index = 10

[node name="Computer" parent="." instance=ExtResource("5_cf373")]
unique_name_in_owner = true
visible = false
z_index = 10

[node name="Credits" type="Control" parent="."]
unique_name_in_owner = true
visible = false
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="Panel" type="Panel" parent="Credits/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ybpfp")

[node name="MarginContainer" type="MarginContainer" parent="Credits/MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/MarginContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Credits/MarginContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/MarginContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleLabel" type="RichTextLabel" parent="Credits/MarginContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("7_5vq04")
theme_override_font_sizes/bold_font_size = 48
bbcode_enabled = true
text = "[center][b]Credits"
fit_content = true

[node name="CreditsHbox" type="HBoxContainer" parent="Credits/MarginContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="RichTextLabel" parent="Credits/MarginContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/CreditsHbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Nehal
DarrylBD99
Lunel
Jules
K916EKHO
Nullify All
Eduardo Arantes
Ménure"
fit_content = true

[node name="RoleLabel" type="RichTextLabel" parent="Credits/MarginContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/CreditsHbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "Lead Developer
Programmer
Programmer
2D Artist
2D Artist
2D Artist
Sound Designer
Music Composer"
fit_content = true

[node name="AssetTitleLabel" type="RichTextLabel" parent="Credits/MarginContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/bold_font = ExtResource("7_5vq04")
theme_override_font_sizes/bold_font_size = 48
bbcode_enabled = true
text = "[center][b]Assets"
fit_content = true

[node name="AssetHbox" type="HBoxContainer" parent="Credits/MarginContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="RichTextLabel" parent="Credits/MarginContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/AssetHbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "GGBotNet
Violin Iliev
Joshua B.
N9 (ninetailsrabbit)
Frederic Maquin
stocksnap.io
pexels.com
Timbre
"
fit_content = true

[node name="AssetLabel" type="RichTextLabel" parent="Credits/MarginContainer/Panel/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/AssetHbox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "X Typewriter Font
Godot Desktop Themes

Indie Blueprint
InkGD
Stock Images

Ambiance"
fit_content = true

[node name="CreditCloseButton" type="Button" parent="Credits/MarginContainer/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Close"

[node name="Glitch" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
z_index = 50
material = SubResource("ShaderMaterial_ly1qh")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_force_pass_scroll_events = false

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = 50
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_force_pass_scroll_events = false
color = Color(1, 0.982, 0.96, 0)
